@@ -1,5 +1,11 @@
 2009-04-15  Jonathan Pryor <jpryor@novell.com>
 
+	* Mono.Documentation/webdoc.cs: When extracting files from the .zip
+	  file, ensure that the output file is closed.  Properly pre-render
+	  ecma namespace documentation.
+
+2009-04-15  Jonathan Pryor <jpryor@novell.com>
+
 	* Makefile: Add reference to ICSharpCode.SharpZipLib.dll.
 	* mdoc.exe.sources: Add Mono.Rocks/ObjectRocks.cs,
 	  Mono.Rocks/StreamRocks.cs.
